--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-styled-components": "^3.3.11",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-plugin-typography": "^2.9.0",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-sharp": "^2.5.15",
+    "gsap": "^3.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
