--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-plugin-typography": "^2.9.0",
     "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-transformer-remark": "^2.14.0",
     "gatsby-transformer-sharp": "^2.5.15",
     "gsap": "^3.5.1",
     "prop-types": "^15.7.2",
